Loading placeholder and images overlapping fix

--- a/public/css/home.styl
+++ b/public/css/home.styl
@@ -216,6 +216,7 @@ div.page
         > .links
           width 660px
           display table
+          visibility hidden
 
           > .linkBox
             width 315px
@@ -281,7 +282,7 @@ div.page
                     font-size 12px
                   > .icon-world-2
                     color rgb(10, 83, 10)
-                    margin-right 5px
+                    margin-right 6px
                     font-size 12px
                     position relative
                     top 2px
@@ -297,7 +298,7 @@ div.page
 
                   > .icon-time
                     color rgb(190, 48, 48)
-                    margin-right 5px
+                    margin-right 6px
                     font-size 12px
                     position relative
                     top 2px
